--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 /* Base*/
 
 *{
-  background-color: #16161a;
-  color: #fffffe;
+  background-color: #faeee7;
+  color: #33272a;
   scroll-behavior: smooth;
 }
