Finished initial TripEditor styling.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,67 @@
 ion-icon {
   font-size: 4rem;
 }
+
+.form-control:focus {
+  outline: none !important;
+  border-color: #aeaeae !important;
+  box-shadow: inset 0 2px 2px #e9e9e9,0 0 10px 0 rgba(73,107,125,.3) !important;
+}
+
+.leave-date-calendar {
+  background-color: white;
+  border-radius: 8px;
+  height: 3rem;
+  width: 19.5rem;
+  border: 1px solid #ced4da;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 20px;
+  font-weight: 400;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.leave-date-calendar:focus {
+  outline: none;
+  border-color: #aeaeae;
+  box-shadow: inset 0 2px 2px #e9e9e9,0 0 10px 0 rgba(73,107,125,.3);
+}
+
+.return-date-calendar {
+  background-color: white;
+  border-radius: 8px;
+  height: 3rem;
+  width: 19.5rem;
+  border: 1px solid #ced4da;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 20px;
+  font-weight: 400;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.return-date-calendar:focus {
+  outline: none;
+  border-color: #aeaeae;
+  box-shadow: inset 0 2px 2px #e9e9e9,0 0 10px 0 rgba(73,107,125,.3);
+}
+
+.react-datepicker-popper[data-placement^="bottom"] {
+  padding-top: 1rem;
+}
+
+.react-datepicker-popper {
+  background-color: transparent;
+}
+
+.return-date-calendar {
+  background-color: white;
+}
