--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -73,3 +73,8 @@ ion-icon {
 .return-date-calendar {
   background-color: white;
 }
+
+.custom-button {
+  background-color: #ff8ba7;
+  border: 2px solid #fffffe;
+}
